--- a/talleres/03/api-asg.yaml
+++ b/talleres/03/api-asg.yaml
@@ -9,20 +9,36 @@ Mappings:
       "AmiId": "ami-026dea5602e368e96"
     us-west-2:
       "AmiId": "ami-0e34e7b9ca0ace12d"
-
+    us-west-1:
+      "AmiId": "ami-01311df3780ebd33e"
 Resources:
+
   LoadBalancerSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: MythicalMysfitsLB
       GroupDescription: Load Balancer
-      # Ingress rules
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0
+          FromPort: 80
+          ToPort: 80
+          IpProtocol: tcp
+          
   InstanceSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: MythicalMysfitsInstance
       GroupDescription: Instances
-      # Ingress rules
+      SecurityGroupIngress:
+        - CidrIp: 0.0.0.0/0
+          FromPort: 22
+          ToPort: 22
+          IpProtocol: tcp
+        - SourceSecurityGroupId: !GetAtt LoadBalancerSG.GroupId
+          FromPort: 8000
+          ToPort: 8000
+          IpProtocol: tcp
+          
   LoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
     Properties:
@@ -30,8 +46,18 @@ Resources:
       SecurityGroups:
         - !GetAtt LoadBalancerSG.GroupId
       AvailabilityZones: !GetAZs
-      # Listeners
-      # HealthCheck
+      Listeners:
+      - InstancePort: 8000
+        InstanceProtocol: TCP
+        LoadBalancerPort: 80
+        Protocol: TCP
+      HealthCheck:
+        HealthyThreshold: 2
+        Interval: 30
+        Target: "TCP:8000"
+        Timeout: 5
+        UnhealthyThreshold: 5
+
   LaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -40,8 +66,52 @@ Resources:
         - !Ref AWS::Region
         - AmiId
       InstanceType: t2.micro
-      KeyName: mythical-mysfits
+      KeyName: mythicalmysfits
       SecurityGroups:
         - !GetAtt InstanceSG.GroupId
-      # UserData
-  # AutoScalingGroup:
+      UserData: 
+        Fn::Base64: |
+          #!/bin/bash -xe
+          exec > >(tee /var/log/cloud-init-output.log|logger -t user-data -s 2>/dev/console) 2>&1
+          cd /home/ec2-user
+          sudo yum install -y python37
+          curl -O https://bootstrap.pypa.io/get-pip.py
+          python3 get-pip.py
+          sudo yum install git -y
+          git clone https://github.com/J00704347/bootcamp-module-devops.git	
+          cd bootcamp-module-devops/backend/
+          pip install -r requirements.txt
+          nohup gunicorn -w 3 -b 0.0.0.0:8000 app:app &
+      
+  AutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties:
+      AvailabilityZones: !GetAZs
+      DesiredCapacity: 1
+      LaunchConfigurationName: !Ref LaunchConfiguration
+      LoadBalancerNames:
+        - !Ref LoadBalancer
+      MaxSize: 2
+      MinSize: 1
+      Tags:
+        - Key: Name
+          PropagateAtLaunch: True
+          Value: Mysfits
+#addind scheduling action 9am turn-on / 6pm turn-off all intances
+    Resources:
+    ScheduledActionOut: 
+      Type: AWS::AutoScaling::ScheduledAction
+      Properties:
+        AutoScalingGroupName: 
+          Ref: "Mysfits"
+        MaxSize: 2
+        MinSize: 1
+        Recurrence: "0 9 * * *"
+    ScheduledActionIn: 
+      Type: AWS::AutoScaling::ScheduledAction
+      Properties:
+        AutoScalingGroupName: 
+          Ref: "Mysfits"
+        MaxSize: 0
+        MinSize: 0
+        Recurrence: "0 18 * * *"
