--- a/talleres/04/rolling.yaml
+++ b/talleres/04/rolling.yaml
@@ -9,12 +9,13 @@ Mappings:
       "AmiId": "ami-026dea5602e368e96"
     us-west-2:
       "AmiId": "ami-0e34e7b9ca0ace12d"
-
+    us-west-1:
+      "AmiId": "ami-01311df3780ebd33e"
 Resources:
   LoadBalancerSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: MythicalMysfitsLB
+      GroupName: MythicalMysfitsLB2
       GroupDescription: Load Balancer
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
@@ -24,7 +25,7 @@ Resources:
   InstanceSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: MythicalMysfitsInstance
+      GroupName: MythicalMysfitsInstance2
       GroupDescription: Instances
       SecurityGroupIngress:
         - SourceSecurityGroupId: !GetAtt LoadBalancerSG.GroupId
@@ -65,6 +66,7 @@ Resources:
       SecurityGroups:
         - !GetAtt InstanceSG.GroupId
       UserData:
+               #la funcion Sub permite metaparametros
         Fn::Base64: !Sub |
           #!/bin/bash -xe
           exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
@@ -73,17 +75,31 @@ Resources:
           cd /root/
           curl -O https://bootstrap.pypa.io/get-pip.py
           python3 get-pip.py
-          git clone https://github.com/eloyvega/bootcamp-devops.git
-          cd ~/bootcamp-devops/backend/
+          cd ~
+          git clone https://github.com/J00704347/bootcamp-module-devops.git
+          cd ~/bootcamp-module-devops/backend/
           pip install -r requirements.txt
           nohup gunicorn -w 3 -b 0.0.0.0:8000 app:app &
           /opt/aws/bin/cfn-signal -e 0 --region ${AWS::Region} --stack ${AWS::StackName} --resource AutoScalingGroup
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     # CreationPolicy:
-
+    CreationPolicy:
+      #AutoScalingCreationPolicy:
+       # MinSuccessfulInstancesPercent: Integer
+      ResourceSignal:    
+        Count: 2
+        Timeout: PT3M
     # UpdatePolicy:
-
+    UpdatePolicy:
+      AutoScalingScheduledAction:
+        IgnoreUnmodifiedGroupSizeProperties: 'true'
+      AutoScalingRollingUpdate:
+        MinInstancesInService: '1'
+        MaxBatchSize: '2'
+        WaitOnResourceSignals: 'true'
+        PauseTime: PT5M
+            
     Properties:
       AvailabilityZones: !GetAZs
       LaunchConfigurationName: !Ref LaunchConfiguration
