--- a/talleres/05/stack-02.yaml
+++ b/talleres/05/stack-02.yaml
@@ -23,8 +23,8 @@ Resources:
   InstanceSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: InstanceStack01
-      GroupDescription: Stack01
+      GroupName: InstanceStack02
+      GroupDescription: Stack02
       VpcId: !Ref VpcId
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
@@ -34,7 +34,7 @@ Resources:
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
-      Name: Stack01
+      Name: Stack02
       HealthCheckIntervalSeconds: 30
       HealthCheckPath: /
       HealthCheckPort: 8000
@@ -43,7 +43,7 @@ Resources:
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 5
       Matcher:
-        HttpCode: 200
+        HttpCode: 200 #redirect 301 es considerado ok
       Port: 8000
       Protocol: HTTP
       TargetType: instance
@@ -71,28 +71,28 @@ Resources:
           git clone https://github.com/J00704347/bootcamp-module-devops.git
           cd ~/bootcamp-module-devops/backend/
           pip install -r requirements.txt
-          nohup gunicorn -w 3 -b 0.0.0.0:8000 app:app &
+          nohup gunicorn -w 3 -b 0.0.0.0:8000 app-v2:app &
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
       AvailabilityZones: !GetAZs
       LaunchConfigurationName: !Ref LaunchConfiguration
       DesiredCapacity: 1
-      MaxSize: 2
+      MaxSize: 1
       MinSize: 1
       TargetGroupARNs:
         - !Ref TargetGroup
       Tags:
         - Key: Name
-          Value: MythicalMysfitsStack01
+          Value: MythicalMysfitsStack02
           PropagateAtLaunch: True
 
 Outputs:
   SecurityGroup:
     Value: !Ref InstanceSG
     Export:
-      Name: Stack01SG
+      Name: Stack02SG #este nombre es unico en la region
   TargetGroup:
     Value: !Ref TargetGroup
     Export:
-      Name: Stack01TargetGroup
+      Name: Stack02TargetGroup #este nombre es unico en la region
