--- a/talleres/10/peering.yaml
+++ b/talleres/10/peering.yaml
@@ -16,7 +16,8 @@ Mappings:
       "AmiId": "ami-01311df3780ebd33e"
     us-west-2:
       "AmiId": "ami-0e34e7b9ca0ace12d"
-
+    us-west-1:
+      "AmiId": "ami-01311df3780ebd33e"
 Resources:
   # VPC A Resources:
   VpcA:
